# rusqlite_migration

./: Cargo.toml
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/from-directory/: Cargo.toml
examples/from-directory/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
rusqlite_migration/: Cargo.toml  build.rs
rusqlite_migration/src/: builder.rs  errors.rs  loader.rs
rusqlite_migration/src/errors/: tests.rs
rusqlite_migration/src/tests/: builder.rs  core.rs
rusqlite_migration_benches/: Cargo.toml
rusqlite_migration_benches/benches/: from_directory.rs  iai.rs
rusqlite_migration_tests/: Cargo.toml
rusqlite_migration_tests/tests/: from_directory_test.rs  integration_test.rs  migrations_builder_from_iterator_test.rs  migrations_builder_test.rs  multiline_test.rs  up_and_down.rs
