[workspace]
members = [
  "rusqlite_migration",
  "rusqlite_migration_tests",
  "rusqlite_migration_benches",
  "examples/*",
]
resolver = "3"

[workspace.package]
authors = [
  "Clément Joly <foss@131719.xyz>",
  "Artiom Tretjakovas <hi@sirse.dev>"
]
categories = ["database"]
description = "Simple schema migration library for rusqlite using user_version instead of an SQL table to maintain the current schema version."
homepage = "https://cj.rs/rusqlite_migration"
keywords = ["rusqlite", "sqlite", "user_version", "database", "migration"]
license = "Apache-2.0"
repository = "https://github.com/cljoly/rusqlite_migration"
documentation = "https://docs.rs/rusqlite_migration/"
version = "2.3.0"
edition = "2024"

[workspace.dependencies]
rusqlite_migration = { path = "./rusqlite_migration" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
