[package]
name = "rusqlite_migration_benches"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
include_dir = { version = "0.7.4" }
rusqlite = "0.38"
rusqlite_migration = { workspace = true, features = ["from-directory"] }

[dev-dependencies]
iai = "0.1"
criterion = { version = "0.8.1", features = ["html_reports", "cargo_bench_support"] }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
