[package]
name = "example-from-directory"
version = "0.1.0"
publish = false

edition.workspace = true

[dependencies]
log = "0.4"
anyhow = "1"
mktemp = "0.5"
include_dir = "0.7.4"
rusqlite_migration = { workspace = true, features = ["from-directory"] }
rusqlite = "0.38"
env_logger = { version = "0.11", default-features = false }
